--- a/css/index.css
+++ b/css/index.css
@@ -47,6 +47,7 @@ a {
     margin-right: 100px;
     display: flex;
     align-items: center;
+    color: white;
 }
 
 .menu-icon {
@@ -92,6 +93,10 @@ nav i {
     background-color: #1d1c2773;
 }
 
+.btn-line img {
+    width: 20px;
+}
+
 .contain {
     width: 100%;
 }
@@ -109,7 +114,7 @@ nav i {
 }
 
 .open {
-    width: 80%;
+    width: 30%;
     background: linear-gradient(145deg, #fd5f6934, #a33dc234, #54309b36);
     padding: 1px 0 1px 80px;
     color: white;
@@ -137,7 +142,7 @@ nav i {
 }
 
 .who-list {
-    width: 40%;
+    width: 50%;
     margin: auto;
     text-align: left;
 }
@@ -203,8 +208,9 @@ nav i {
     font-weight: bold;
 }
 
-video {
+.videos iframe {
     width: 90%;
+    height: 90%;
     margin: auto;
 }
 
@@ -313,13 +319,11 @@ h1 {
     margin-left: 80px;
     color: white;
     font-weight: 200;
-    font-size: 15px;
     margin-bottom: 80px;
 }
 
 .condition-txt span {
     font-weight: 500;
-    font-size: 18px;
 }
 
 .condition-btn {
@@ -490,7 +494,7 @@ footer {
 .join2 {
     position: fixed;
     top: 80%;
-    right: 20px;
+    right: 100px;
     z-index: 2;
 }
 
@@ -507,10 +511,6 @@ footer {
     backdrop-filter: blur(2px);
     background-color: rgba(255, 255, 255, 0.103);
     margin-right: 5%;
-}
-
-.diss-none {
-    display: none;
 }
 
 .btn-discord:hover {
@@ -548,8 +548,11 @@ footer {
 }
 
 .icon-btn {
-    width: 40px;
-    height: 40px;
+    width: 45px;
+    height: 45px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: rgba(255, 255, 255, 0.137);
     border: none;
     cursor: pointer;
@@ -557,6 +560,18 @@ footer {
     border-radius: 10px;
     backdrop-filter: blur(2px);
     transition: all 0.3s;
+}
+
+.icon-social a {
+    color: white;
+    margin: 0 20px;
+    cursor: pointer;
+}
+
+.top-link {
+    width: auto;
+    margin: 0 20px;
+    display: flex;
 }
 
 .icon-btn:hover {
@@ -596,6 +611,18 @@ footer {
 
 .download h3 {
     text-align: center;
+}
+
+@media only screen and (min-width: 1600px) {
+    body {
+        font-size: 20px;
+    }
+}
+
+@media only screen and (max-width: 1600px) {
+    body {
+        font-size: 16px;
+    }
 }
 
 @media only screen and (max-width:1360px) {
@@ -662,8 +689,34 @@ footer {
         font-size: 2rem;
         color: white;
     }
-    .who-list {
+    .menubar {
         width: 100%;
+        position: absolute;
+        background-color: #2c2c2c;
+        display: none;
+        flex-wrap: wrap;
+        z-index: 4;
+    }
+}
+
+@media only screen and (max-width: 880px) {
+    .btn-discord-txt {
+        display: none;
+    }
+    .btn-discord {
+        width: auto;
+        border-radius: 10px;
+        padding: 13px;
+        margin-right: 10px;
+    }
+    .join2 {
+        right: 20px;
+    }
+}
+
+@media only screen and (max-width: 840px) {
+    .open {
+        width: 50%;
     }
 }
 
@@ -692,29 +745,12 @@ footer {
         width: 120px;
         margin: auto;
     }
-    .menubar {
-        width: 100%;
-        position: absolute;
-        background-color: #2c2c2c;
-        display: none;
-        flex-wrap: wrap;
-        z-index: 4;
-    }
     .open {
         padding-left: 2rem;
         display: flex;
     }
     .join {
         margin-top: 150px;
-    }
-    .btn-discord {
-        width: auto;
-        border-radius: 10px;
-        padding: 13px;
-        margin-right: 10px;
-    }
-    .btn-discord-txt {
-        display: none;
     }
     .diss-none {
         display: flex;
@@ -756,10 +792,14 @@ footer {
     .menu-icon {
         display: block;
     }
-    .x {
-        position: absolute;
-        top: 20%;
-        right: 10%;
+    .videos iframe {
+        height: 300px;
+    }
+}
+
+@media only screen and (min-width: 655px) {
+    .wel-txt {
+        font-size: 19px;
     }
 }
 
@@ -845,7 +885,6 @@ footer {
         margin: 20px auto;
     }
     .wel-btn2 {
-        width: 250px;
         margin: 20px auto;
     }
     .join {
@@ -882,6 +921,13 @@ footer {
     }
     .condition {
         margin: 0;
+    }
+    .who-list {
+        width: 100%;
+    }
+    .ml-20 {
+        width: 90%;
+        margin: auto;
     }
 }
 
